fix: align items on ingredients section of palabok page

--- a/css/palabok.css
+++ b/css/palabok.css
@@ -94,3 +94,19 @@ p.descText {
     width: 50%;
     text-align: center;
 }
+
+.ingredientsSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h2.ingredientsTitle {
+    text-align: center;
+}
+
+.secondaryIs {
+    display: flex;
+    gap: 48px;
+    align-items: flex-start;
+}
